# Flowtrades

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  diff_frontend.txt  diff_frontend_utf8.txt  requirements.txt
app/: DEV_GUIDE.md  config.py  config.toml  main.py  prod_runner.py  pyproject.toml  trade_bus.py
btc-orderflow/: config.py  config.toml  dev_runner.py  main.py  pyproject.toml  test_ws.py
btc-orderflow/frontend/: index.html  package.json  vite.config.js
btc-orderflow/frontend/src/: App.jsx  index.css
btc-orderflow/frontend/src/components/: ChartContainer.jsx  ConnectionOverlay.jsx  DeltaCanvas.jsx  DeltaPane.jsx  ErrorBoundary.jsx  FootprintCanvas.jsx  FootprintLwcChart.jsx  FootprintTable.jsx  Header.jsx  InteractiveViewport.jsx  PriceScale.jsx
btc-orderflow/frontend/src/hooks/: useChartWebSocket.js  useFootprint.js
btc-orderflow/frontend/src/plugins/: FootprintPrimitive.js
btc-orderflow/frontend/src/utils/: aggregateCandles.js  formatVol.js  gestures.js  instrument.js  tickSteps.js
btc-orderflow/ingestion/: base.py  bybit.py
btc-orderflow/output/: serializer.py  ws_server.py
btc-orderflow/state/: state.py
btc-orderflow/tests/: test_time_window.py
docs/: ARCHITECTURE_AUDIT.md  Agent_Context.md  Audit_by_Grok.md  BTC_OrderFlow_Architecture_v2.docx  BTC_OrderFlow_Architecture_v2.docx.md  BTC_OrderFlow_UIEngineering_Guide.docx.md  CHANGELOG.md  Decisions.md  Flowtrades_Deployment_Guide_for_AI_Agent.docx.md  Flowtrades_Deployment_Guide_v2.md  UI_ARCHITECTURE_AUDIT.md  UI_ARCHITECTURE_SPEC.md  footprint_option_A_vs_B.html
(+45 files in other folders)
