[project]
name = "btc-orderflow"
version = "0.1.0"
description = "Real-time BTC order flow visualization across Binance, OKX, and Bybit"
requires-python = ">=3.10"
dependencies = [
    "websockets>=12.0",
    "rich>=13.0",
    "structlog>=24.0",
    "pydantic>=2.0",
    "fastapi>=0.100",
    "uvicorn>=0.20",
    "tomli>=2.0;python_version<'3.11'",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[project.scripts]
flowtrades-dev = "dev_runner:main"
flowtrades-prod = "prod_runner:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
